# sudachiclone-wasm-demo

./: .gitignore  README.md  index.html  package.json  tsconfig.json  webpack.config.js
crate/: Cargo.toml
crate/src/: lib.rs
src/: alert.tsx  comlink.ts  index.html  index.tsx  untar.ts  wait-wasm-initialize.tsx  worker.ts
